--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,101 @@
-h1{
+body {
+    background-image: url(/images/minimalizm-gradient-background.jpg);
+    background-size: cover;
+    background-color: blueviolet;
+}
+h1 {font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 45px;
+    color: rgb(221, 245, 4);
+    text-align: center;
+    padding: 40px;
+    width: 100%;
+    background-color:rgba(220, 220, 220, 0.438);
+}
+.guideLogo {
+    float: left;
+    margin-left: 30px;
+    margin-bottom:10px;
+}
+
+.sticky {
+    position: -webkit-sticky;
+    position:sticky;
+    top: 0;
+    text-align: center;
+    font-size: 20px;    
+    width: 97%;
+    height: 100px;
+    margin: 10px;
+    margin-bottom: 5px;
+    margin-right: 10px;
+}
+ul {
+    list-style-type: none;
+    width: 95%;
+    margin: 0;
+    padding: 15px;
+    padding-left: 12%;
+    padding-right: 5%;
+    overflow: hidden;
+    float: left;
+}
+li {
+    float:left;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    text-decoration: none;
+    padding-left: 7%;
+    padding-right: 7%;
+
+}
+.column1 {
+    width: 48%;
+    padding: 30px;
+    margin: 25px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    background-color:rgba(220, 220, 220, 0.438);
+    float:left;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    
+}
+.column2 {
+    width: 45%;
+    padding: 30px;
+    margin: 25px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    background-color:rgba(220, 220, 220, 0.438);
+    float: right;
+}
+.guidedog2 {    
+    margin: 35px;
+    float: left;
+}
+.puppy {
+    margin: 35px;
+    float: left;
+}
+.map {
+    background-color: rgba(220, 220, 220, 0.438);
+    padding: 10px;
+}
+.fb-logo {
+    padding:10px;
+}
+
+footer{
+    clear: both;
+    bottom: 0;
+    width: 100%;
+    background-color: rgba(220, 220, 220, 0.438);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    font-size: 30px;
+    color: rgb(221, 245, 4);
 }
